# web_app

./: .wiki.md  privacy_content.txt
acollya/acollya-backend/: .env.example  .gitignore  alembic.ini  docker-compose.yml  handler.py  handler_jobs.py  pyproject.toml  requirements-dev.txt  requirements.txt
acollya/acollya-backend/app/: config.py  database.py  main.py
acollya/acollya-backend/app/core/: auth.py  crisis_detector.py  dependencies.py  exceptions.py  llm_provider.py  rate_limiter.py
acollya/acollya-backend/app/models/: __init__.py  appointment.py  chat_message.py  chat_session.py  clinical_knowledge.py  crisis_event.py  journal_entry.py  mood_checkin.py  program.py  program_progress.py  subscription.py  therapist.py  user.py  user_persona_fact.py  user_session.py
acollya/acollya-backend/app/schemas/: analytics.py  appointment.py  auth.py  chat.py  journal.py  mood.py  persona.py  program.py  subscription.py  therapist.py  user.py
acollya/acollya-backend/app/services/: analytics_service.py  appointment_service.py  auth_service.py  chat_service.py  clinical_kb_service.py  journal_service.py  mood_service.py  persona_service.py  program_service.py  rag_service.py  routing_service.py  (+5 more)
acollya/acollya-backend/migrations/: env.py
acollya/acollya-backend/tests/: conftest.py  test_analytics_service.py  test_appointment_service.py  test_auth_service.py  test_chat_service.py  test_journal_service.py  test_mood_service.py  test_program_service.py  test_subscription_service.py  test_therapist_service.py  test_user_service.py  test_webhook_service.py
(+194 files in other folders)
